// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReleasedPropertyField should render with provided 'Not Released' status 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="released-details"
>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
    data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
    id="field-id"
    tabindex="0"
  >
    Released Status
  </h6>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-1vvwjbg"
  >
    <div
      aria-labelledby="field-id"
      class="MuiBox-root css-i8j0ju"
      data-testid="released-property-field-status-7e51bcc0-7abc-462c-81e8-a33058fa1b1e"
      role="text"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-il7e6s-MuiSvgIcon-root"
        data-testid="not-released-icon-7e51bcc0-7abc-462c-81e8-a33058fa1b1e"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.94 5.12 6.49 3.66C8.07 2.61 9.96 2 12 2c5.52 0 10 4.48 10 10 0 2.04-.61 3.93-1.66 5.51l-1.46-1.46C19.59 14.86 20 13.48 20 12c0-4.41-3.59-8-8-8-1.48 0-2.86.41-4.06 1.12zm9.72 4.41-1.41-1.41-2.65 2.65 1.41 1.41 2.65-2.65zm2.12 13.08-2.27-2.27C15.93 21.39 14.04 22 12 22 6.48 22 2 17.52 2 12c0-2.04.61-3.93 1.66-5.51L1.39 4.22 2.8 2.81l18.38 18.38-1.4 1.42zm-3.72-3.73L12.18 15l-1.59 1.59-4.24-4.24 1.41-1.41 2.83 2.83.18-.18-5.65-5.65C4.41 9.14 4 10.52 4 12c0 4.41 3.59 8 8 8 1.48 0 2.86-.41 4.06-1.12z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
        data-testid="not-released-text-7e51bcc0-7abc-462c-81e8-a33058fa1b1e"
      >
        Not Released
      </p>
    </div>
  </div>
</div>
`;

exports[`ReleasedPropertyField should render with provided 'Released' status 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="released-details"
>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
    data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
    id="field-id"
    tabindex="0"
  >
    Released Status
  </h6>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-1vvwjbg"
  >
    <div
      aria-labelledby="field-id"
      class="MuiBox-root css-i8j0ju"
      data-testid="released-property-field-status-7e51bcc0-7abc-462c-81e8-a33058fa1b1e"
      role="text"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-il7e6s-MuiSvgIcon-root"
        data-testid="released-icon-7e51bcc0-7abc-462c-81e8-a33058fa1b1e"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="m17.66 9.53-7.07 7.07-4.24-4.24 1.41-1.41 2.83 2.83 5.66-5.66 1.41 1.41zM4 12c0-2.33 1.02-4.42 2.62-5.88L9 8.5v-6H3l2.2 2.2C3.24 6.52 2 9.11 2 12c0 5.19 3.95 9.45 9 9.95v-2.02c-3.94-.49-7-3.86-7-7.93zm18 0c0-5.19-3.95-9.45-9-9.95v2.02c3.94.49 7 3.86 7 7.93 0 2.33-1.02 4.42-2.62 5.88L15 15.5v6h6l-2.2-2.2c1.96-1.82 3.2-4.41 3.2-7.3z"
        />
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-3ahvbo-MuiTypography-root"
        data-testid="released-text-7e51bcc0-7abc-462c-81e8-a33058fa1b1e"
      >
        Released
      </p>
    </div>
  </div>
</div>
`;
